search: suggestions fixes
* Fixes flowing/overlapping bugs in the search suggestions dropbdown.

--- a/invenio/modules/search/static/css/search/search.css
+++ b/invenio/modules/search/static/css/search/search.css
@@ -1,6 +1,6 @@
 /*
  * This file is part of Invenio.
- * Copyright (C) 2012, 2014 CERN.
+ * Copyright (C) 2012, 2014, 2015 CERN.
  *
  * Invenio is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -54,4 +54,8 @@
     position: absolute;
     top: auto;
     bottom: 170px;
+}
+
+.searchexamples .after-fix {
+    margin-right: 30px;
 }
